Bug 477585 - Unintended indicator on top of panel applets when Peek at Desktop is enabled
Summary: Unintended indicator on top of panel applets when Peek at Desktop is enabled
Status: CLOSED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6, regression
: 477894 480836 483555 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-11-27 00:19 UTC by guimarcalsilva
Modified: 2024-03-19 18:53 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments
Additional indicator when Peek at Desktop is enabled (1.86 MB, video/mp4)
2023-11-27 00:19 UTC, guimarcalsilva
Details
Screenshot on TW 6.0.2: Double highlight (1.52 MB, image/png)
2024-03-16 21:10 UTC, postix
Details
Video : Bug is still here in Plasma 6.0.2 (2.10 MB, video/x-matroska)
2024-03-18 19:12 UTC, vincentv42
Details
Screen recording: Plasma 6.0.2 Wayland on openSUSE TW (2.00 MB, video/x-matroska)
2024-03-18 19:27 UTC, postix
Details

Note You need to log in before you can comment on or make changes to this bug.
Description guimarcalsilva 2023-11-27 00:19:12 UTC
Created attachment 163514 [details]
Additional indicator when Peek at Desktop is enabled

SUMMARY
There's an indicator line on top of app icons (and the Kickoff icon) on the panel when Peek at Desktop is active. Check the attached video.

STEPS TO REPRODUCE
1. Have open applications
2. Enable Peek at Desktop
3. Hover over app icons on the panel

OBSERVED RESULT
There's an additional indicator that wasn't present on 5.27

EXPECTED RESULT
No indicator

SOFTWARE/OS VERSIONS
KDE Plasma Version: 5.85.0 
KDE Frameworks Version: 5.245.0 
Qt Version: 6.6.0
Comment 1 guimarcalsilva 2023-11-27 00:28:33 UTC
PS: This also happens with a non-floating panel.
Comment 2 Nate Graham 2023-11-27 03:52:21 UTC
Can reproduce.
Comment 3 Niccolò Venerandi 2023-11-27 18:22:36 UTC
This seems to be the panel focus thingy? Looking into it
Comment 4 Niccolò Venerandi 2023-12-02 09:45:53 UTC
*** Bug 477894 has been marked as a duplicate of this bug. ***
Comment 5 Bug Janitor Service 2024-01-19 13:20:01 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libplasma/-/merge_requests/1036
Comment 6 Nate Graham 2024-01-23 15:33:26 UTC
Git commit 4b32a23fd87ffc878e2b37559eed09cae039f8f3 by Nate Graham, on behalf of Niccolò Venerandi.
Committed on 23/01/2024 at 16:33.
Pushed by ngraham into branch 'master'.

Set Panel to NeedsAttentionstatus when one of its applets is activated

The idea is that NeedsAttentionStatus prevents the panel from gaining
keyboard input focus unnecessarily, which would result in an extra
blue line.
FIXED-IN: 6.0

M  +4    -1    src/plasma/containment.cpp
M  +0    -5    src/plasmaquick/plasmoid/plasmoiditem.cpp

https://invent.kde.org/plasma/libplasma/-/commit/4b32a23fd87ffc878e2b37559eed09cae039f8f3
Comment 7 Nate Graham 2024-02-05 21:46:32 UTC
*** Bug 480836 has been marked as a duplicate of this bug. ***
Comment 8 Edip 2024-03-14 16:43:13 UTC
*** Bug 483555 has been marked as a duplicate of this bug. ***
Comment 9 postix 2024-03-14 16:45:51 UTC
My report has been marked as a dup. I still experience it in 6.0.1 + the indicator has a gap to the panel when the panel is floating.
Comment 10 vincentv42 2024-03-14 16:49:21 UTC
I can confirm that the bug is still there on 6.0.2 on arch.
Comment 11 Nate Graham 2024-03-14 19:13:47 UTC
The bug did get fixed, but then later regressed for other reasons. It was fixed again in Bug 479084.
Comment 12 Edip 2024-03-14 19:16:26 UTC
(In reply to Nate Graham from comment #11)
> The bug did get fixed, but then later regressed for other reasons. It was
> fixed again in Bug 479084.
It's says:
FIXED-IN: 6.0.2

But people facing this bug in 6.0.2?
Comment 13 Nate Graham 2024-03-14 19:19:38 UTC
Then something else is going on. The issue described there is fixed for me, so *something*'s fixed. :) Maybe people still affected are using X11 and it's only fixed on Wayland. Maybe their distro mis-packaged things. Could be any number of other things. We'll need more information in there to proceed.
Comment 14 postix 2024-03-16 19:20:27 UTC
I still(In reply to Nate Graham from comment #13)
> Then something else is going on. The issue described there is fixed for me,
> so *something*'s fixed. :) 

>Maybe people still affected are using X11 and
> it's only fixed on Wayland. 

It's also not fixed for me on openSUSE TW + Plasma 6.0.2 using the Wayland session.

> Maybe their distro mis-packaged things. Could be
> any number of other things. We'll need more information in there to proceed.

Now the issue obviously persists on both Arch and openSUSE TW. Either both distros have a packaging problem or maybe your system has some other patch applied, which has not official been rolled out yet?
Comment 15 guimarcalsilva 2024-03-16 19:22:14 UTC
(In reply to postix from comment #14)
> I still(In reply to Nate Graham from comment #13)
> Now the issue obviously persists on both Arch and openSUSE TW. Either both
> distros have a packaging problem...

I can reproduce it on Neon User Edition using a Wayland session, so that doesn't seem to be the case.
Comment 16 postix 2024-03-16 21:10:13 UTC
Created attachment 167341 [details]
Screenshot on TW 6.0.2: Double highlight

Actually I managed to get two highlights:

1) Open Kickoff
2) Click on Peak to desktop (Kickoff closes then)
3) Open Kickoff again
4) Click on Peak to desktop

The second highlight floats above the panel and is also visible for the icon only task manager on hover.
Comment 17 Nate Graham 2024-03-18 18:43:00 UTC
Are people reproducing the original issue *exactly* as described in comment 0? If not, it's a different issue, and we should be a new bug report about it.
Comment 18 Edip 2024-03-18 18:47:51 UTC
(In reply to Nate Graham from comment #17)
> Are people reproducing the original issue *exactly* as described in comment
> 0? If not, it's a different issue, and we should be a new bug report about
> it.

I'm reproducing the exact same issue
Comment 19 Nate Graham 2024-03-18 18:59:54 UTC
Ok, please attach a screen recording so I can see how you're doing it and attempt to replicate that.

Also, are you reproducing it on X11, or Wayland, or both?
Comment 20 Edip 2024-03-18 19:05:29 UTC
(In reply to Nate Graham from comment #19)
> Ok, please attach a screen recording so I can see how you're doing it and
> attempt to replicate that.
> 
> Also, are you reproducing it on X11, or Wayland, or both?

I can't upload a new screen record because I'm outside now, but there is a screen recording in the bug: https://bugs.kde.org/show_bug.cgi?id=477894 (the exact same steps)
Comment 21 Edip 2024-03-18 19:06:12 UTC
(In reply to Nate Graham from comment #19)
> Ok, please attach a screen recording so I can see how you're doing it and
> attempt to replicate that.
> 
> Also, are you reproducing it on X11, or Wayland, or both?

And I can reproduce them in x11 and Wayland both
Comment 22 Nate Graham 2024-03-18 19:08:41 UTC
Edip, what's in Bug 477894 isn't helpful since that was from months ago. I need a screen recording from today, on a system verified to be using Plasma 6.0.2.
Comment 23 vincentv42 2024-03-18 19:12:00 UTC
Created attachment 167420 [details]
Video : Bug is still here in Plasma 6.0.2

The bug on Plasma 6.0.2 on arch using Wayland
Comment 24 Nate Graham 2024-03-18 19:16:05 UTC
Thanks. As I had suspected, that's a different issue from the one described and fixed here. I can reproduce it too, but it's not the same thing. Please submit a new bug report about it.
Comment 25 vincentv42 2024-03-18 19:22:12 UTC
(In reply to Nate Graham from comment #24)
> Thanks. As I had suspected, that's a different issue from the one described
> and fixed here. I can reproduce it too, but it's not the same thing. Please
> submit a new bug report about it.

Is the bug seen in the video i've sent the same as this one ? 
https://bugs.kde.org/show_bug.cgi?id=480836
Comment 26 postix 2024-03-18 19:27:59 UTC
Created attachment 167423 [details]
Screen recording: Plasma 6.0.2 Wayland on openSUSE TW

@Nate, this seems pretty much the same as shown in the OT, which I experience with 6.0.2 on Wayland with a newly created user account. Also please check second 10 and later, there are two indicators for kickoff.
Comment 27 Edip 2024-03-18 19:34:52 UTC
(In reply to Nate Graham from comment #24)
> Thanks. As I had suspected, that's a different issue from the one described
> and fixed here. I can reproduce it too, but it's not the same thing. Please
> submit a new bug report about it.
im sure that is the same issue but as u want, i created a new Bug 483928
Comment 28 Nate Graham 2024-03-19 18:20:48 UTC
(In reply to postix from comment #26)
> Created attachment 167423 [details]
> Screen recording: Plasma 6.0.2 Wayland on openSUSE TW
> 
> @Nate, this seems pretty much the same as shown in the OT, which I
> experience with 6.0.2 on Wayland with a newly created user account. Also
> please check second 10 and later, there are two indicators for kickoff.

Thanks. The screen recording depicts the exact issue that was fixed in Bug 479084. Exactly. So I suspect there may be a packaging issue in the distro; maybe that commit got patched out or broken or something.

One other option I can think of is that maybe the fix for that bug doesn't work unless https://invent.kde.org/plasma/libplasma/-/commit/988161d805526a527bf96a94af066757774c552b is also applied, but that hasn't been rolled out to users yet since it's scheduled for release in Frameworks 6.1. If so, that would explain how all the developers (who build everything from git master) think it's fixed. Let me investigate that.
Comment 29 Nate Graham 2024-03-19 18:22:56 UTC
Hmm, nope, still works fine for me with that commit locally reverted.

Also, I was wrong about one thing: that commit is not in a framework since libplasma was moved to the plasma release schedule. Gotta get used to this!
Comment 30 Nate Graham 2024-03-19 18:53:42 UTC
Since we're getting multiple reports of the problem still happening, I've re-opened the most recent bug report about it, which is Bug 479084. Let's let this one stay closed as it was fixing and earlier manifestation of the issue, and use Bug 479084 as the master bug report for all new reports of it still happening. Thanks for your patience, folks.