Set Panel to NeedsAttentionstatus when one of its applets is activated

The idea is that NeedsAttentionStatus prevents the panel from gaining
keyboard input focus unnecessarily, which would result in an extra
blue line.

BUG: 477585
FIXED-IN: 6.0